--- a/index.html
+++ b/index.html
@@ -50,11 +50,12 @@
       </main>
       <footer>
         <p>
+          
           This project was coded by
-          <a href="#" target="_blank">Matt Delac</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
-        </p>
+        <a href="https://github.com/codergirlshecodes" target="_blank">Alexa Cacchiola</a> and is
+        <a href="https://github.com/codergirlshecodes/weather-app-public" target="_blank"> on GitHub</a> and
+        <a href="https://app.netlify.com/signup/start/connect/repos/codergirlshecodes%2Fweather-app-public" target="_blank">hosted on Netlify</a>
+    
       </footer>
     </div>
     <script src="script.js"></script>
