changed netlify url to correct project url

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
       </main>
       <footer>
         <p>
-          
+
           This project was coded by
         <a href="https://github.com/codergirlshecodes" target="_blank">Alexa Cacchiola</a> and is
         <a href="https://github.com/codergirlshecodes/weather-app-public" target="_blank"> on GitHub</a> and
-        <a href="https://app.netlify.com/signup/start/connect/repos/codergirlshecodes%2Fweather-app-public" target="_blank">hosted on Netlify</a>
+        <a href="https://app.netlify.com/sites/loquacious-cheesecake-4743b7/deploys/658a4888727b000892888ae7" target="_blank">hosted on Netlify</a>
     
       </footer>
     </div>
