--- a/index.html
+++ b/index.html
@@ -1,63 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="styles.css" />
     <title>My weather application</title>
-  </head>
-  <body>
-    <div class="weather-app">
-      <header>
-        <form id="search-form">
-          <input
-            type="search"
-            placeholder="Enter a city.."
-            required
-            class="search-input"
-            id="search-input"
-          />
-          <input type="submit" value="Search" class="search-button" />
-        </form>
-      </header>
-      <main>
-        <div class="current-weather">
-          <div>
-            <h1 class="current-city" id="current-city">Paris</h1>
-            <p class="current-details">
-              <span id="current-date"></span>, moderate rain <br />
-              Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
-            </p>
-          </div>
-          <div class="current-temperature">
-            <span class="current-temperature-icon">☀️</span>
-            <span
-              class="current-temperature-value"
-              id="current-temperature-value"
-            ></span
-            ><span
-              class="current-temperature-unit"
-              id="current-temperature-unit"
-            ></span>
-          </div>
-        </div>
-      </main>
-      <footer>
-        <p>
+</head>
 
-          This project was coded by
-        <a href="https://github.com/codergirlshecodes" target="_blank">Alexa Cacchiola</a> and is
-        <a href="https://github.com/codergirlshecodes/weather-app-public" target="_blank"> on GitHub</a> and
-        <a href="https://app.netlify.com/sites/loquacious-cheesecake-4743b7/deploys/658a4888727b000892888ae7" target="_blank">hosted on Netlify</a>
-    
-      </footer>
+<body>
+    <div class="weather-app">
+        <header>
+            <form id="search-form">
+                <input type="search" placeholder="Enter a city.." required class="search-input" id="search-input" />
+                <input type="submit" value="Search" class="search-button" />
+            </form>
+        </header>
+        <main>
+            <div class="current-weather">
+                <div>
+                    <h1 class="current-city" id="current-city">Paris</h1>
+                    <p class="current-details">
+                        <span class="current-date" id="current-date"></span>,
+                        <span class="weather-description" id="weather-description"></span>
+                        <br />
+                        Humidity: <strong class="humidity-value"></strong>, Wind: <strong class="wind-speed"></strong>
+                    </p>
+                </div>
+                <div class="current-temperature">
+                    <div class="weather-icon" id="weather-icon"></div>
+                    <span class="material-icons" id="weather-icon-i">
+                    <span class="current-temperature-value" id="current-temperature-value"></span>
+                    <span class="current-temperature-unit" id="current-temperature-unit"></span>
+                </div>
+            </div>
+        </main>
+        <footer>
+            <p>
+                This project was coded by <a href="#" target="_blank">Matt Delac</a> and is
+                <a href="#" target="_blank"> on GitHub</a> and
+                <a href="#" target="_blank">hosted on Netlify</a>
+            </p>
+        </footer>
     </div>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="script.js"></script>
-  </body>
+</body>
+
 </html>
