added code for icons

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                     </p>
                 </div>
                 <div class="current-temperature">
-                    <div class="weather-icon" id="weather-icon"></div>
-                    <span class="material-icons" id="weather-icon-i">
+                    <div class="weather-icon" id="weather-icon">
+                        <img src="https://github.com/codergirlshecodes/weather-app-public/tree/main/animated" alt="Weather Icon" id="animated-weather-icon" />
                     <span class="current-temperature-value" id="current-temperature-value"></span>
                     <span class="current-temperature-unit" id="current-temperature-unit"></span>
                 </div>
