added image next to temperature and pushed to netlify

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </p>
                 </div>
                 <div class="current-temperature">
-                    <div class="weather-icon" id="weather-icon"></div>
+                    <div class="weather-icon" id="weather-icon">⛅</div>
                     <span class="material-icons" id="weather-icon-i">
                     <span class="current-temperature-value" id="current-temperature-value"></span>
                     <span class="current-temperature-unit" id="current-temperature-unit"></span>
