--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         </main>
         <footer>
             <p>
-                This project was coded by <a href="#" target="_blank">Matt Delac</a> and is
-                <a href="#" target="_blank"> on GitHub</a> and
-                <a href="#" target="_blank">hosted on Netlify</a>
+                This project was coded by <a href="#" target="_blank">Alexa Cacchiola</a> and is
+                <a href="https://github.com/codergirlshecodes/weather-app-public/tree/main" target="_blank"> on GitHub</a> and
+                <a href="" target="_blank">hosted on Netlify</a>
             </p>
         </footer>
     </div>
