--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <span class="current-date" id="current-date"></span>,
                         <span class="weather-description" id="weather-description"></span>
                         <br />
-                        Humidity: <strong class="humidity-value"></strong>, Wind: <strong class="wind-speed"></strong>
+                        <strong class="humidity-value"></strong>, <strong class="wind-speed"></strong>
                     </p>
                 </div>
                 <div class="current-temperature">
